RESOLVED FIXED78762
[chromium] Bundle page scale factor and limits in CCLayerTreeHost
https://bugs.webkit.org/show_bug.cgi?id=78762
Summary [chromium] Bundle page scale factor and limits in CCLayerTreeHost
Alexandre Elias
Reported 2012-02-15 16:49:29 PST
[chromium] Bundle page scale factor and limits in CCLayerTreeHost
Attachments
Patch (8.72 KB, patch)
2012-02-15 17:06 PST, Alexandre Elias
no flags
Patch (8.75 KB, patch)
2012-02-16 17:59 PST, Alexandre Elias
no flags
Alexandre Elias
Comment 1 2012-02-15 17:06:16 PST
James Robinson
Comment 2 2012-02-15 17:11:37 PST
Comment on attachment 127279 [details] Patch Cool
WebKit Review Bot
Comment 3 2012-02-15 23:05:53 PST
Comment on attachment 127279 [details] Patch Rejecting attachment 127279 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/11534666
Alexandre Elias
Comment 4 2012-02-16 17:59:30 PST
Alexandre Elias
Comment 5 2012-02-16 18:00:23 PST
Fixed changelog syntax.
WebKit Review Bot
Comment 6 2012-02-16 21:58:55 PST
Comment on attachment 127488 [details] Patch Clearing flags on attachment: 127488 Committed r108031: <http://trac.webkit.org/changeset/108031>
WebKit Review Bot
Comment 7 2012-02-16 21:58:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.