[chromium] Bundle page scale factor and limits in CCLayerTreeHost https://bugs.webkit.org/show_bug.cgi?id=78762

Setting page scale factor and its limits in separate methods
may cause clamping bugs if one of them makes it to the
impl thread before the other.  Change the API to bundle them together,
which matches the existing impl-side interface.

Patch by Alexandre Elias <aelias@google.com> on 2012-02-16
Reviewed by James Robinson.

Source/WebCore:

No new tests (API change will disallow this type of bug).

* platform/graphics/chromium/cc/CCLayerTreeHost.cpp:
(WebCore::CCLayerTreeHost::CCLayerTreeHost):
(WebCore::CCLayerTreeHost::finishCommitOnImplThread):
(WebCore::CCLayerTreeHost::setPageScaleFactorAndLimits):
* platform/graphics/chromium/cc/CCLayerTreeHost.h:
(CCLayerTreeHost):

Source/WebKit/chromium:

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::computePageScaleFactorLimits):
(WebKit::WebViewImpl::setIsAcceleratedCompositingActive):
(WebKit::WebViewImpl::updateLayerTreeViewport):
* tests/CCLayerTreeHostTest.cpp:
(WTF::CCLayerTreeHostTestStartPageScaleAnimation::applyScrollAndScale):

Canonical link: https://commits.webkit.org/95865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108031 268f45cc-cd09-0410-ab3c-d52691b4dbfc